# advent-of-code-2025

./: README.md
day-01/src/: main.rs
day-02/src/: aoc.gleam  digit.gleam  range.gleam  solution.gleam
day-02/test/: aoc_test.gleam  digit_test.gleam
day-03/: Makefile
day-03/src/: main.zig
day-04/: Makefile  go.mod
day-04/aoc/: aoc.go  aoc_test.go
day-04/cmd/aoc/: main.go
day-05/: Makefile  aoc.cabal
day-05/app/: Main.hs
day-05/src/: Aoc.hs  Interval.hs  Range.hs
day-05/test/: AocTests.hs  IntervalTests.hs  Main.hs  Tests.hs
day-06/: Makefile
day-06/lib/: aoc.ml
day-06/test/: test_aoc.ml
day-07/: Makefile  main.py
day-07/tests/: test_aoc.py
day-09/src/: aoc.gleam  point.gleam
day-09/test/: aoc_test.gleam
day-11/: gleam.toml  manifest.toml
day-11/src/: aoc.gleam
day-11/test/: aoc_test.gleam
day-12/: Makefile
day-12/src/: main.zig
template/ocaml/: Makefile
