cabal-version:   3.0
name:            aoc
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      anthony.dickson9656@gmail.com
author:          Anthony Dickson
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Aoc
        Interval

    hs-source-dirs:   src
    default-language: GHC2024
    ghc-options:      -Wall
    build-depends:    base ^>=4.20.2.0

executable aoc
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -Wall
    build-depends:
        base ^>=4.20.2.0,
        aoc

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        AocTests
        IntervalTests

    default-language: GHC2024
    ghc-options:      -Wall
    build-depends:
        base ^>=4.20.2.0,
        aoc,
        HUnit
